clusters/room101-a7d-mc/cluster-prereqs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster-room101-a7d-mc
---
apiVersion: v1
kind: Namespace
metadata:
  name: flux-system
