clusters/room101-a7d-mc/cluster-prereqs/ingress-kubernetes-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: kubernetes-external
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: k8s.room101-a7d-mc.lab.a7d.dev
    http:
      paths:
      - backend:
          service:
            name: kubernetes
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - k8s.room101-a7d-mc.lab.a7d.dev
